add img, edit logo

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <header id="site_header">
         <div class="logo">
-            Logo
+            <img src="./assets/img/logo.svg" alt="">
         </div>
 
         <div class="intestation">
@@ -18,7 +18,7 @@
         </div>
         
         <div class="login-button">  
-            Subscribe    
+            <button>Accedi</button>  
         </div>
 
     </header>
@@ -28,7 +28,7 @@
         
         <div class="flex-container-first">
             <div id="jumbotron">
-
+                <img src="/assets/img/jumbo.png" alt="">
             </div>
         </div>
 
