--- a/index.html
+++ b/index.html
@@ -14,7 +14,11 @@
         </div>
 
         <div class="intestation">
-            Link Link Link
+            <div class="nav-log">Scarica</div>
+            <div class="nav-log">Perchè Discord</div>
+            <div class="nav-log">Nitro</div>
+            <div class="nav-log">Sicurezza</div>
+            <div class="nav-log">Assistenza</div>
         </div>
         
         <div class="login-button">  
