--- a/index.html
+++ b/index.html
@@ -31,9 +31,7 @@
     <main class="flex-container">
         
         <div class="flex-container-first">
-            <div id="jumbotron">
-                <img src="/assets/img/jumbo.png" alt="">
-            </div>
+                <img id="jumbotron" src="/assets/img/jumbo.png" alt="">
         </div>
 
         <section id="invite">
