add fandom section

--- a/index.html
+++ b/index.html
@@ -59,9 +59,12 @@
 
         <section id="fandom">
             <div class="fandom left">
+                <img src="./assets/img/item3.svg" alt="">
             </div>
         
             <div class="fandom right">
+               <h2><strong>Da pochi a un fandom</strong></h2>
+               <p id="server-organisation">Dai inizio a una community con strumenti di moderazione e accesso ai membri personalizzabile. Concedi ai membri poteri speciali, crea canali privati e molto altro.</p>
             </div>
         </section>
 
