add section in touch, add mac button

--- a/index.html
+++ b/index.html
@@ -69,9 +69,22 @@
         </section>
 
         <section id="in-touch">
+
             <div id="content-in-touch">
-                
+                <h1><strong>TECNOLOGIA AFFIDABILE PER TENERSI IN CONTATTO</strong></h1>
+            <p>Video e audio a bassa latenza ti faranno sentire come se foste tutti nella stessa stanza. Fai ciao in video, guarda gli amici giocare in streaming, o riunitevi in una sessione di disegno con la condivisione schermo.</p>
             </div>
+
+            <div >
+                <img src="./assets/img/item4-big.svg" alt="">
+            </div>
+
+            <div>
+                <p><strong>Pronto Ad Iniziare La Tua Avventura?</strong></p>
+            </div>
+
+            <button id="mac-button">&DownArrowBar; Scarica Per Mac</button>
+
         </section>
     </main>
     <!-- /#site_main -->
