--- a/index.html
+++ b/index.html
@@ -81,6 +81,7 @@
 
             <div>
                 <p><strong>Pronto Ad Iniziare La Tua Avventura?</strong></p>
+                <img src="./assets/img/stars.svg" alt="">
             </div>
 
             <button id="mac-button">&DownArrowBar; Scarica Per Mac</button>
@@ -91,11 +92,54 @@
     
     
     <footer id="site_footer">
-        <div class="box primary"></div>
-        <div class="box"></div>
-        <div class="box"></div>
-        <div class="box"></div>
-        <div class="box"></div>
+        <div class="box primary">
+            <h2 class="heading-box"><strong>Il tuo posto per parlare</strong></h2>
+            <img src="./assets/img/ita.png" alt="icona della bandiera italiana"> Italiano&#9660;
+            <div>
+            </div>
+        </div>
+
+        <div class="box">
+           <div class="heading-box">Prodotto</div>
+           <div>Scarica</div>
+           <div>Perchè Discord</div>
+           <div>Nitro</div>
+           <div>Sicurezza</div>
+           <div>Assistenza</div>
+        </div>
+
+        <div class="box">
+            <div class="heading-box">Compagnia</div>
+            <div>Chi siamo</div>
+            <div>Lavora con noi</div>
+            <div>Marchio</div>
+            <div>Redazione</div>
+            <div>Negozio</div>
+        </div>
+
+        <div class="box">
+            <div class="heading-box">Risorse</div>
+            <div>Scarica</div>
+            <div>Perchè discord</div>
+            <div>Nitro</div>
+            <div>Sicurezza</div>
+            <div>Assistenza</div>
+            <div>Scarica</div>
+            <div>Perchè Discord</div>
+            <div>Nitro</div>
+            <div>Sicurezza</div>
+            <div>Assistenza</div>
+            <div>Assistenza</div>
+        </div>
+
+        <div class="box">
+            <div class="heading-box">Norme</div>
+            <div>Scarica</div>
+            <div>Perchè discord</div>
+            <div>Nitro</div>
+            <div>Sicurezza</div>
+            <div>Assistenza</div>
+        </div>
     </footer>
     <!-- /#site_footer -->
 
