--- a/index.html
+++ b/index.html
@@ -145,10 +145,12 @@
 
     <div id="final-logo-button">
         <div class="logo">
+            <img src="./assets/img/logo.svg" alt="">
         </div>
         <div class="intestation end">
         </div>
-        <div class="login-button">      
+        <div> 
+            <button>Accedi</button>     
         </div>
     </div>
     
