--- a/index.html
+++ b/index.html
@@ -143,16 +143,18 @@
     </footer>
     <!-- /#site_footer -->
 
-    <div id="final-logo-button">
+    <div class="bottom-symbol">
         <div class="logo">
             <img src="./assets/img/logo.svg" alt="">
         </div>
         <div class="intestation end">
         </div>
         <div> 
-            <button>Accedi</button>     
+            <button id="register-button">Registrati</button>     
         </div>
     </div>
     
 </body>
 </html>
+
+
