edit jumbotron, fix button in header and footer

--- a/index.html
+++ b/index.html
@@ -31,7 +31,14 @@
     <main class="flex-container">
         
         <div class="flex-container-first">
-            <img id="jumbotron" src="/assets/img/jumbo.png" alt="">
+            <h1><strong>Benvenuti su discord</strong></h1>
+            <p id="under-heading-intestation">Entra a far parte di un club scolastico, un gruppo di gamer, una community artistica mondiale o dove trascorrere tempo assieme a un piccolo gruppo di amici: uno spazio in cui è più facile chiacchierare ogni giorno e ritrovarsi più spesso.</p>
+            <div>
+                <button>Scarica per Mac</button>
+                <button>Apri Discord nel tuo Browser</button>
+
+            </div>
+        
         </div>
 
         <section id="invite">
@@ -71,8 +78,8 @@
         <section id="in-touch">
 
             <div id="content-in-touch">
-                <h1><strong>TECNOLOGIA AFFIDABILE PER TENERSI IN CONTATTO</strong></h1>
-            <p>Video e audio a bassa latenza ti faranno sentire come se foste tutti nella stessa stanza. Fai ciao in video, guarda gli amici giocare in streaming, o riunitevi in una sessione di disegno con la condivisione schermo.</p>
+                <h2><strong>TECNOLOGIA AFFIDABILE PER TENERSI IN CONTATTO</strong></h2>
+                <p id="video-latency">Video e audio a bassa latenza ti faranno sentire come se foste tutti nella stessa stanza. Fai ciao in video, guarda gli amici giocare in streaming, o riunitevi in una sessione di disegno con la condivisione schermo.</p>
             </div>
 
             <div >
