add mac and browser button in first section

--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
             <div class="nav-log">Assistenza</div>
         </div>
         
-        <div class="login-button">  
-            <button>Accedi</button>  
+        <div>  
+            <button class="login-button">Accedi</button>  
         </div>
 
     </header>
@@ -34,9 +34,8 @@
             <h1><strong>Benvenuti su discord</strong></h1>
             <p id="under-heading-intestation">Entra a far parte di un club scolastico, un gruppo di gamer, una community artistica mondiale o dove trascorrere tempo assieme a un piccolo gruppo di amici: uno spazio in cui è più facile chiacchierare ogni giorno e ritrovarsi più spesso.</p>
             <div>
-                <button>Scarica per Mac</button>
-                <button>Apri Discord nel tuo Browser</button>
-
+                <button class="button-download mac">&DownArrow; Scarica per Mac</button>
+                <button class="button-download browser">Apri Discord nel tuo Browser</button>
             </div>
         
         </div>
