--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         <section id="easy-find">
             <div class="easy-find right">
                  <h2><strong>Dove trovarsi è facile</strong></h2>
-               <p id="server-organisation">Mettiti comodo e apri un gruppo di discussione con le persone che preferisci</p>
+               <p class="server-organisation">Mettiti comodo e apri un gruppo di discussione con le persone che preferisci</p>
             </div>
         
             <div class="easy-find left">
@@ -70,7 +70,7 @@
         
             <div class="fandom right">
                <h2><strong>Da pochi a un fandom</strong></h2>
-               <p id="server-organisation">Dai inizio a una community con strumenti di moderazione e accesso ai membri personalizzabile. Concedi ai membri poteri speciali, crea canali privati e molto altro.</p>
+               <p class="server-organisation">Dai inizio a una community con strumenti di moderazione e accesso ai membri personalizzabile. Concedi ai membri poteri speciali, crea canali privati e molto altro.</p>
             </div>
         </section>
 
