edit wave svg color

--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
             </div>
         </section>
 
+        <img class="wave" src="./assets/img/wave.svg" alt="">
 
         <section id="easy-find">
             <div class="easy-find right">
@@ -60,10 +61,14 @@
         
             <div class="easy-find left">
                 <img src="./assets/img/item2.svg" alt="">
-            </div>
+            </div>  
+
         </section>
 
+        <img id="wave-secondary" src="./assets/img/wave.svg" alt="">s
+
         <section id="fandom">
+
             <div class="fandom left">
                 <img src="./assets/img/item3.svg" alt="">
             </div>
