--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             <div class="invite right">
                <h2><strong>Un Luogo Ad Invito Con Tutto Lo Spazio Necessario Per Parlare</strong></h2>
                <p id="server-organisation">I server Discord sono organizzati in canali tematici in cui puoi collaborare, condividere o semplicemente parlare della tua giornata senza intasare una chat di gruppo.</p>
-            </div>
+            </div>  
         </section>
 
         <img class="wave" src="./assets/img/wave.svg" alt="">
@@ -61,11 +61,11 @@
         
             <div class="easy-find left">
                 <img src="./assets/img/item2.svg" alt="">
-            </div>  
-
+            </div>
+            
         </section>
 
-        <img id="wave-secondary" src="./assets/img/wave.svg" alt="">s
+        <img class="wave secondary" src="./assets/img/wave.svg" alt="">
 
         <section id="fandom">
 
@@ -78,6 +78,8 @@
                <p class="server-organisation">Dai inizio a una community con strumenti di moderazione e accesso ai membri personalizzabile. Concedi ai membri poteri speciali, crea canali privati e molto altro.</p>
             </div>
         </section>
+
+        <img class="wave" src="./assets/img/wave.svg" alt="">
 
         <section id="in-touch">
 
