edit p in touch

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
             </div>
 
             <div>
-                <p><strong>Pronto Ad Iniziare La Tua Avventura?</strong></p>
+                <h2><strong>Pronto Ad Iniziare La Tua Avventura?</strong></h2>
                 <img src="./assets/img/stars.svg" alt="">
             </div>
 
