edit Italy icon

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
     <footer id="site_footer">
         <div class="box primary">
             <h2 class="heading-box"><strong>Il tuo posto per parlare</strong></h2>
-            <img src="./assets/img/ita.png" alt="icona della bandiera italiana"> Italiano&#9660;
+            <img src="./assets/img/ita.png" alt="icona della bandiera italiana"> <a class="href" target="_blank" href="https://www.youtube.com/watch?v=wd4likgy_s4">Italiano&#9660;</a>
             <div>
             </div>
         </div>
@@ -167,5 +167,6 @@
     
 </body>
 </html>
+
 
 
